update dependencies in jupyter notebook

--- a/FPCA_preprocessing.ipynb
+++ b/FPCA_preprocessing.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from scipy.io import wavfile\n",
-    "from helpers import *\n",
+    "from egg_io import *\n",
     "import matplotlib.pyplot as plt\n",
     "all_data = pd.read_csv(\"voiceSauce.csv\")\n",
     "TIMEPOINT = 5"
