--- a/FPCA_preprocessing.ipynb
+++ b/FPCA_preprocessing.ipynb
@@ -26,8 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Village 2/\n",
-      "Found file after 14 attempts.\n"
+      "Found file after 2 attempts.\n"
      ]
     },
     {
@@ -76,28 +75,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5002</th>\n",
-       "      <td>Bo_F3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Bo</td>\n",
-       "      <td>Village 2</td>\n",
-       "      <td>F3_lu_21_01</td>\n",
-       "      <td>287.821</td>\n",
-       "      <td>416.685</td>\n",
-       "      <td>128.864</td>\n",
+       "      <th>4060</th>\n",
+       "      <td>Luchun_M4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Luchun</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>M4_xa_33_02</td>\n",
+       "      <td>174.01</td>\n",
+       "      <td>464.703</td>\n",
+       "      <td>290.693</td>\n",
        "      <td>5</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.454</td>\n",
-       "      <td>-396.526</td>\n",
-       "      <td>352.877</td>\n",
-       "      <td>918.914</td>\n",
-       "      <td>351.234</td>\n",
-       "      <td>0.256</td>\n",
-       "      <td>0.761</td>\n",
-       "      <td>0.142</td>\n",
-       "      <td>Bo-Tense</td>\n",
-       "      <td>0.336399</td>\n",
+       "      <td>0.522</td>\n",
+       "      <td>-276.239</td>\n",
+       "      <td>322.225</td>\n",
+       "      <td>834.061</td>\n",
+       "      <td>317.847</td>\n",
+       "      <td>1.355</td>\n",
+       "      <td>3.44</td>\n",
+       "      <td>0.395</td>\n",
+       "      <td>Luchun-Tense</td>\n",
+       "      <td>0.393895</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -106,16 +105,16 @@
       ],
       "text/plain": [
        "     speaker_id  speaker_number speaker_sex language language_variety  \\\n",
-       "5002      Bo_F3               3           F       Bo        Village 2   \n",
+       "4060  Luchun_M4               4           M   Luchun              NaN   \n",
        "\n",
        "         filename  segment_start  segment_end  duration  timepoint  ...  \\\n",
-       "5002  F3_lu_21_01        287.821      416.685   128.864          5  ...   \n",
+       "4060  M4_xa_33_02         174.01      464.703   290.693          5  ...   \n",
        "\n",
        "      CQ_PM  min_Vel min_Vel_Time peak_Vel peak_Vel_Time  SQ2_SQ1  SQ4_SQ3  \\\n",
-       "5002  0.454 -396.526      352.877  918.914       351.234    0.256    0.761   \n",
+       "4060  0.522 -276.239      322.225  834.061       317.847    1.355     3.44   \n",
        "\n",
-       "      ratio     LPhon        SQ  \n",
-       "5002  0.142  Bo-Tense  0.336399  \n",
+       "      ratio         LPhon        SQ  \n",
+       "4060  0.395  Luchun-Tense  0.393895  \n",
        "\n",
        "[1 rows x 80 columns]"
       ]
