Fix Bo catch. down to 16 missing!!!

--- a/io_checks.ipynb
+++ b/io_checks.ipynb
@@ -23,26 +23,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3172 595 2332\n"
+      "5150 595 16\n"
      ]
     }
    ],
    "source": [
     "yes = 0\n",
     "noHmong = 0\n",
+    "noGuj = 0\n",
     "noElse = 0\n",
+    "mandf5 = 0\n",
     "for i, row in all_data.iterrows():\n",
     "    # print(row['language'])\n",
     "    paath = filepath(row)\n",
     "    if os.path.isfile(paath): yes += 1\n",
     "    else: \n",
     "        if 'Hmong' in paath: noHmong += 1\n",
-    "        else: noElse += 1\n",
+    "        elif 'Gujarati' in paath: noGuj += 1\n",
+    "        elif 'Mandarin/F5_' in paath: mandf5 += 1\n",
+    "        else:\n",
+    "            noElse += 1\n",
+    "            if 'Bo' in paath:\n",
+    "                print(paath)\n",
     "        # no += 1\n",
     "        # print(paath)\n",
     "\n",
     "print(yes, noHmong, noElse)\n",
-    "# before gujarati was 3172, 595, 2332"
+    "\n",
+    "# before gujarati was 3172, 595, 2332\n",
+    "# after gujarati implemented, we're looking at 5024, 595, 480\n",
+    "# note: we're missing exactly 332 gujarati, which is just the M1 situation\n",
+    "# further, mandarin F5 is in .egg format, but has 6 tokens in all_data\n",
+    "# that brings us to 5024, 595, 142\n",
+    "# yi fix brings 5076, 595, 90\n",
+    "# BO FIX CHUNKS DOWN TO 16 non-hmong MISSING!!! RAHHHHH!!!\n"
    ]
   }
  ],
