write longwinded note in io_checks

--- a/io_checks.ipynb
+++ b/io_checks.ipynb
@@ -23,7 +23,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5150 595 16\n"
+      "egg_melt/Mandarin/F42_02_e.wav\n",
+      "egg_melt/Mandarin/F42_04_b.wav\n",
+      "egg_melt/Mandarin/F42_04_d.wav\n",
+      "egg_melt/Mandarin/F42_04_e.wav\n",
+      "egg_melt/Mandarin/F5_02_b.wav\n",
+      "egg_melt/Mandarin/F5_02_c.wav\n",
+      "egg_melt/Mandarin/F5_02_d.wav\n",
+      "egg_melt/Mandarin/F5_04_a.wav\n",
+      "egg_melt/Mandarin/F5_04_c.wav\n",
+      "egg_melt/Mandarin/F5_04_e.wav\n",
+      "5162 595 10\n",
+      "332\n"
      ]
     }
    ],
@@ -40,15 +51,15 @@
     "    else: \n",
     "        if 'Hmong' in paath: noHmong += 1\n",
     "        elif 'Gujarati' in paath: noGuj += 1\n",
-    "        elif 'Mandarin/F5_' in paath: mandf5 += 1\n",
+    "        # elif 'Mandarin/F5_' in paath: mandf5 += 1\n",
     "        else:\n",
     "            noElse += 1\n",
-    "            if 'Bo' in paath:\n",
-    "                print(paath)\n",
+    "            print(paath)\n",
     "        # no += 1\n",
     "        # print(paath)\n",
     "\n",
     "print(yes, noHmong, noElse)\n",
+    "print(noGuj)\n",
     "\n",
     "# before gujarati was 3172, 595, 2332\n",
     "# after gujarati implemented, we're looking at 5024, 595, 480\n",
@@ -56,7 +67,15 @@
     "# further, mandarin F5 is in .egg format, but has 6 tokens in all_data\n",
     "# that brings us to 5024, 595, 142\n",
     "# yi fix brings 5076, 595, 90\n",
-    "# BO FIX CHUNKS DOWN TO 16 non-hmong MISSING!!! RAHHHHH!!!\n"
+    "# BO FIX CHUNKS DOWN TO 16 non-hmong MISSING!!! RAHHHHH!!!\n",
+    "# quick luchun fix brings us down to 4, and idek where those files would be. so. that's a win\n",
+    "\n",
+    "# files we're missing and reasons\n",
+    "# - missing 595 files, because of the stupid .pmf file format that I hate. (no hmong rn)\n",
+    "# - missing 332 gujarati files, they just aren't in the .zip\n",
+    "# - missing 10 mandarin files, some because of the .egg format, and some due to them being missing from the .zip\n",
+    "\n",
+    "# The rest we have! Yay!\n"
    ]
   }
  ],
